# stackspend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXECUTION_PLAN.md  README.md  SECURITY.md  SUPPORT.md  compose.yaml  design-qa.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs.md  provider_connector.md
.github/workflows/: ci.yml  desktop-release.yml  npm-publish-cli.yml  secret-scan.yml
apps/app/: .npmignore  LICENSE  README.md  package.json
apps/cli/: README.md  package.json  tsconfig.json
apps/tray/: README.md  package.json
apps/tray/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/tray/src-tauri/capabilities/: default.json
apps/tray/src-tauri/src/: main.rs
apps/web/: next-env.d.ts  next.config.mjs  package.json  tsconfig.json
docs/: application-readiness-checklist.md  architecture.md  canonical-vs-live-today.md  codex-for-open-source.md  codex-reset-credits.md  demo.md  experimental-integrations.md  install.md  local-ai-cli-usage.md  local-hud-sync.md  openai-oss-application-draft.md  project-metrics.md  project-purpose-prompt.md  provider-connector-test-harness.md  provider-connectors.md  release-application-ready-notes.md  roadmap.md  security-model.md  security-review-checklist.md  security.md
docs/product/: decision-log.md  execution-plan.md  provider-catalog-spec.md  v0.1.0-alpha-checklist.md  (+2 more)
workspace/: project-profile.json
(+216 files in other folders)
