[package]
name = "moneysiren-tray"
version = "0.1.0-alpha.27"
description = "MoneySiren local desktop tray notifier"
authors = ["MoneySiren contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-ico", "image-png", "macos-private-api", "tray-icon"] }
